secretdocpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: privaterep
    image: venuumarji/privatev1:tomcat
  imagePullSecrets:
  - name: regcred
