daemonset-tomcat.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tomcat-ds
spec:
  selector: 
    matchLabels:
      app: ds
  template:
    metadata:
      labels:
        app: ds
    spec:
      containers:
        - name: deploy-tomcat
          image: cgdoc12/1.0:35

---
apiVersion: v1
kind: Service
metadata: 
  name: daemon
spec:
  type: NodePort
  selector:
    app: ds
  ports:
    - port: 8086
      targetPort: 8080
      nodePort: 30004
