deployset-extIP-tomcat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-tomcat
spec:
  replicas: 4
  selector: 
    matchLabels:
      app: deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: deploy
    spec:
      containers:
      - name: deploy-tomcat
        image: cgdoc12/1.0:35

---
apiVersion: v1
kind: Service
metadata: 
  name: deploy
spec:
  selector:
    app: deploy
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  externalIPs:
    - 172.31.25.1
