deployset-jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 4
  selector: 
    matchLabels:
      app: deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: deploy
    spec:
      containers:
      - name: deploy
        image: jenkins:2.60.2-alpine
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 0
        volumeMounts:
          - mountPath: "/var/jenkins_home"
            name: jenkinsvolume 
      volumes: 
        - name: jenkinsvolume
          persistentVolumeClaim:
            claimName: jenkins-home-claim

---
apiVersion: v1
kind: Service
metadata: 
  name: deploy
spec:
  type: NodePort
  selector:
    app: deploy
  ports:
    - port: 8088
      targetPort: 8080
      nodePort: 30006
