jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deploy
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: jenkins-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins-deploy
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
---
apiVersion: v1
kind: Service
metadata: 
  name: jenkins-deploy
spec:      
  selector:
    app: jenkins-deploy
  ports:
    - name: port1        
      port: 8091
      targetPort: 8080
    - name: port2
      port: 50001
      targetPort: 50000
