node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taint-tomcat
spec:
  replicas: 8
  selector: 
    matchLabels:
      app: taint
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: taint
    spec:
      containers:
        - name: taint-tomcat
          image: cgdoc12/1.0:35
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1 
            preference:             
              matchExpressions:
                - key: size
                  operator: In
                  values:
                    - small  
                    - large
---
apiVersion: v1
kind: Service
metadata: 
  name: taint
spec:
  type: NodePort
  selector:
    app: taint
  ports:
    - port: 8086
      targetPort: 8080
      nodePort: 30004
