podaffinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taint-tomcat
spec:
  replicas: 8
  selector: 
    matchLabels:
      app: taint
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: taint
    spec:
      containers:
        - name: taint-tomcat
          image: cgdoc12/1.0:35
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:  
                matchExpressions:
                - key: app
                  operator: In
                  values:
                    - taint
              topologyKey: "kubernetes.io/hostname"
                    
---
apiVersion: v1
kind: Service
metadata: 
  name: taint
spec:
  type: NodePort
  selector:
    app: taint
  ports:
    - port: 8086
      targetPort: 8080
      nodePort: 30004
