tomcat-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: mydeploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mydeploy
    spec:
      containers:
        - name: mydeploy
          image: tomcat:9.0.62
---
apiVersion: v1
kind: Service
metadata: 
  name: mydeploy
spec:
  selector:
    app: mydeploy
  ports:
    - port: 8095
      targetPort: 8080
